Fixed firefox crash, removed scrollbars

--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
 .background {
   height: 100%;
   width: 100%;
-  background-image: url("https://download.hipwallpaper.com/desktop/1536/864/14/4/fBCWJa.jpg");
+  background-image: url("https://firebasestorage.googleapis.com/v0/b/photowebapp-8e07e.appspot.com/o/WebsiteImages%2FfBCWJa.jpg?alt=media&token=10297137-a2c7-4ed4-89e3-71229ed17870");
   background-repeat: no-repeat;
   background-size: 100%;
   opacity: 0.5;
